--- a/BirthdayCake.html
+++ b/BirthdayCake.html
@@ -172,7 +172,7 @@
 </svg>
 <div class="name" style="z-index: 100;">Chọn nhé</div>
 <div class="happy" style="z-index: 100;">
-    <img src="happybirthday.jpg">
+    <img src="HappyBirthday.jpg">
 </div>
 <div class="button-style1">
     <a href="Memories.html" class="lk1">
