--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </div>
     
-    <audio src="1.mp3" autoplay="autoplay" loop="loop">
+    <audio src="1.mp3" autoplay="autoplay" loop="loop"></audio>
 
     <script src="jquery-2.1.1.min.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript"></script>
